--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@swc/core": "^1.7.11",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.7",
     "jest": "^29.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
