--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "@types/uuid": "^10.0.0",
+    "class-validator": "^0.14.1",
+    "lodash": "^4.17.21",
+    "uuid": "^10.0.0"
   }
 }
