--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@swc/cli": "^0.4.0",
     "@swc/core": "^1.7.11",
     "@swc/jest": "^0.2.36",
+    "@types/chance": "^1.1.6",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.7",
+    "chance": "^1.1.12",
     "jest": "^29.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
