--- a/envs/.env.example
+++ b/envs/.env.example
@@ -1,7 +1,7 @@
 DB_VENDOR=sqlite
 DB_HOST=":memory:"
 DB_LOGGING=false
-
+DB_AUTO_LOAD_MODELS=true
 # DB_VENDOR=mysql
 # DB_HOST=db_test
 # DB_DATABASE=micro_videos_test
