--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migrate:ts": "node -r ts-node/register/transpile-only -r tsconfig-paths/register ./src/migrate.ts",
+    "migrate:js": "node ./dist/migrate.js"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -37,6 +39,7 @@
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
     "sqlite3": "^5.1.7",
+    "umzug": "^3.8.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
